--- a/app/src/main/res/navigation/navigation_graph_tab_home.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_home.xml
@@ -11,10 +11,22 @@
         <action
             android:id="@+id/action_home_to_comments"
             app:destination="@id/comments" />
+        <action
+            android:id="@+id/action_home_to_detailedTimenote"
+            app:destination="@id/detailedTimenote" />
     </fragment>
     <fragment
         android:id="@+id/comments"
         android:name="com.timenoteco.timenote.view.homeFlow.Comments"
         android:label="fragment_comments"
         tools:layout="@layout/fragment_comments" />
+    <fragment
+        android:id="@+id/detailedTimenote"
+        android:name="com.timenoteco.timenote.view.homeFlow.DetailedTimenote"
+        android:label="fragment_detailed_timenote"
+        tools:layout="@layout/fragment_detailed_fragment" >
+        <action
+            android:id="@+id/action_detailedTimenote_to_comments"
+            app:destination="@id/comments" />
+    </fragment>
 </navigation>
