--- a/app/src/main/res/layout/fragment_comments.xml
+++ b/app/src/main/res/layout/fragment_comments.xml
@@ -39,12 +39,45 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/notification_manager_rv"
+        tools:listitem="@layout/item_comment"
+        android:id="@+id/comments_rv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/comments_ll"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/card_line_0"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
+
+    <TextView
+        android:id="@+id/card_line_0"
+        app:layout_constraintBottom_toTopOf="@id/comments_edittext"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="#60000000"
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"/>
+
+    <EditText
+        android:textSize="15sp"
+        android:padding="12dp"
+        android:hint="@string/add_a_comment"
+        android:background="@android:color/transparent"
+        android:id="@+id/comments_edittext"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:textColor="@color/colorPrimary"
+        android:text="@string/publish"
+        app:layout_constraintTop_toTopOf="@id/comments_edittext"
+        android:textSize="14sp"
+        android:padding="12dp"
+        app:layout_constraintEnd_toEndOf="@id/comments_edittext"
+        app:layout_constraintBottom_toBottomOf="@id/comments_edittext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
