--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,7 @@
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:color/white"
     android:layout_height="match_parent">
 
@@ -40,7 +40,6 @@
                 android:layout_gravity="end"
                 android:layout_marginEnd="16dp"
                 android:text="@string/done"
-                android:textColor="@color/colorTextSecondary"
                 android:textSize="17sp" />
 
             <ImageView
@@ -51,19 +50,17 @@
                 android:layout_gravity="start"
                 android:layout_marginEnd="16dp"
                 android:text="@string/done"
-                android:textColor="@color/colorTextSecondary"
                 android:textSize="17sp" />
 
 
         </androidx.appcompat.widget.Toolbar>
 
-        <View
-            app:layout_constraintEnd_toEndOf="parent"
+        <TextView
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/home_toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="#60000000"
             android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/too" />
+            android:layout_height="0.1dp"/>
 
     </LinearLayout>
 
