--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -33,7 +33,6 @@
 
         </androidx.appcompat.widget.Toolbar>
 
-
         <View
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +44,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:paddingVertical="4dp"
         tools:itemCount="5"
         tools:listitem="@layout/item_notification"
         android:id="@+id/notifications_rv"
