--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -49,21 +49,13 @@
 
             </androidx.appcompat.widget.Toolbar>
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/pref_sub_category_toolbar">
+         <TextView
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             android:background="#60000000"
+             android:layout_width="match_parent"
+             android:layout_height="0.1dp"/>
 
-                <!-- **** Place Your Content Here **** -->
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="5dp"
-                    android:background="@drawable/too" />
-
-            </FrameLayout>
         </LinearLayout>
 
     <TextView
