--- a/app/src/main/res/layout/item_timenote.xml
+++ b/app/src/main/res/layout/item_timenote.xml
@@ -18,9 +18,11 @@
     <TextView
         android:id="@+id/timenote_username"
         android:layout_marginStart="8dp"
-        tools:text="username"
+        tools:text="Samuel"
+        android:textStyle="bold"
         android:textSize="14sp"
         android:layout_marginTop="16dp"
+        android:textColor="@color/colorText"
         app:layout_constraintStart_toEndOf="@id/timenote_pic_user_imageview"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="wrap_content"
@@ -29,10 +31,8 @@
     <TextView
         android:id="@+id/timenote_place"
         tools:text="34 Ohio Street"
-        android:textAllCaps="true"
-        android:textColor="@color/colorTextSecondary"
+        android:textColor="@color/colorText"
         android:textSize="12sp"
-        android:textStyle="bold"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toEndOf="@id/timenote_pic_user_imageview"
         app:layout_constraintTop_toBottomOf="@id/timenote_username"
@@ -169,6 +169,7 @@
         android:layout_height="wrap_content"/>
 
     <ImageView
+        android:id="@+id/timenote_plus"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
