--- a/app/src/main/res/navigation/nav_host_fragment_main.xml
+++ b/app/src/main/res/navigation/nav_host_fragment_main.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_host_fragment.xml"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_host_fragment.xml"
     app:startDestination="@id/tabHome">
 
     <fragment
@@ -23,4 +25,5 @@
         android:id="@+id/createTimenote"
         android:name="com.timenoteco.timenote.view.createTimenoteFlow.TabCreateTimenote"
         android:label="CreateTimenote" />
+    <include app:graph="@navigation/navigation_graph_tab_home" />
 </navigation>
