--- a/app/src/main/res/navigation/navigation_graph_tab_nearby.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_nearby.xml
@@ -11,10 +11,29 @@
         <action
             android:id="@+id/action_nearBy_to_nearbyFilters"
             app:destination="@id/nearbyFilters" />
+        <action
+            android:id="@+id/action_nearBy_to_comments"
+            app:destination="@id/comments" />
+        <action
+            android:id="@+id/action_nearBy_to_detailedTimenote"
+            app:destination="@id/detailedTimenote" />
     </fragment>
     <fragment
         android:id="@+id/nearbyFilters"
         android:name="com.timenoteco.timenote.view.nearByFlow.NearbyFilters"
         android:label="fragment_nearby_filters"
         tools:layout="@layout/fragment_nearby_filters" />
+    <fragment
+        android:id="@+id/comments"
+        android:name="com.timenoteco.timenote.view.homeFlow.Comments"
+        android:label="Comments" />
+    <fragment
+        android:id="@+id/detailedTimenote"
+        android:name="com.timenoteco.timenote.view.homeFlow.DetailedTimenote"
+        android:label="fragment_detailed_fragment"
+        tools:layout="@layout/fragment_detailed_fragment" >
+        <action
+            android:id="@+id/action_detailedTimenote_to_comments"
+            app:destination="@id/comments" />
+    </fragment>
 </navigation>
