--- a/app/src/main/res/drawable/too.xml
+++ b/app/src/main/res/drawable/too.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient android:startColor="@android:color/transparent"
-        android:endColor="#88333333"
+    <gradient android:startColor="@android:color/holo_red_dark"
+        android:endColor="@android:color/holo_red_dark"
         android:angle="90"/>
 
 </shape>
