--- a/app/src/main/res/layout/adapter_pref_sub_category_card.xml
+++ b/app/src/main/res/layout/adapter_pref_sub_category_card.xml
@@ -34,11 +34,7 @@
         <TextView
             android:id="@+id/card_line"
             app:layout_constraintTop_toBottomOf="@id/pref_sub_category_title_category"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="#60000000"
-            android:layout_width="match_parent"
-            android:layout_height="0.1dp"/>
+            style="@style/AppTheme.Divider.Toolbar"/>
 
         <androidx.recyclerview.widget.RecyclerView
             tools:listitem="@layout/item_pref_sub_category"
