--- a/app/src/main/res/layout/adapter_search_explore.xml
+++ b/app/src/main/res/layout/adapter_search_explore.xml
@@ -35,11 +35,7 @@
         android:layout_marginTop="4dp"
         android:id="@+id/search_explore_divider"
         app:layout_constraintTop_toBottomOf="@id/search_explore_category"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="#60000000"
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"/>
+        style="@style/AppTheme.Divider.Toolbar"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_explore_rv"
