--- a/app/src/main/res/layout/fragment_comments.xml
+++ b/app/src/main/res/layout/fragment_comments.xml
@@ -9,32 +9,17 @@
 
     <LinearLayout
         android:id="@+id/comments_ll"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        style="@style/AppTheme.Toolbar.LinearLayout">
 
-        <androidx.appcompat.widget.Toolbar
-            android:theme="@style/ThemeOverlay.AppCompat.Dark"
-            style="@style/AppTheme.Toolbar"
-            tools:ignore="MissingConstraints">
+        <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/comments"
-                android:textColor="@android:color/black"
-                android:textSize="17sp"/>
+                style="@style/AppTheme.Toolbar.Title"
+                android:text="@string/comments"/>
 
         </androidx.appcompat.widget.Toolbar>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/too" />
+        <TextView style="@style/AppTheme.Divider.Toolbar"/>
 
     </LinearLayout>
 
@@ -51,11 +36,7 @@
     <TextView
         android:id="@+id/card_line_0"
         app:layout_constraintBottom_toTopOf="@id/comments_edittext"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="#60000000"
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"/>
+        style="@style/AppTheme.Divider.Toolbar"/>
 
     <EditText
         android:textSize="15sp"
