--- a/app/src/main/res/layout/fragment_detailed_fragment.xml
+++ b/app/src/main/res/layout/fragment_detailed_fragment.xml
@@ -10,17 +10,9 @@
 
     <LinearLayout
         android:id="@+id/detailed_timenote_ll"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        style="@style/AppTheme.Toolbar.LinearLayout">
 
-        <androidx.appcompat.widget.Toolbar
-            android:theme="@style/ThemeOverlay.AppCompat.Dark"
-            style="@style/AppTheme.Toolbar"
-            tools:ignore="MissingConstraints">
+        <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -60,10 +52,7 @@
 
         </androidx.appcompat.widget.Toolbar>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/too" />
+        <TextView style="@style/AppTheme.Divider.Toolbar"/>
 
     </LinearLayout>
 
