--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,55 +12,27 @@
 
     <LinearLayout
         android:id="@+id/home_ll"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        style="@style/AppTheme.Toolbar.LinearLayout">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/home_toolbar"
-            style="@style/AppTheme.Toolbar"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark">
+        <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textColor="@color/colorText"
-                android:textSize="17sp"
+                style="@style/AppTheme.Toolbar.Title"
                 android:text="@string/timeline" />
 
             <ImageView
                 android:src="@drawable/ic_arrow_forward_black_24dp"
                 android:id="@+id/home_future_timeline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginEnd="16dp"
-                android:text="@string/done"
-                android:textSize="17sp" />
+                style="@style/AppTheme.Toolbar.ImageRight"/>
 
             <ImageView
                 android:src="@drawable/ic_arrow_back_black_24dp"
                 android:id="@+id/home_past_timeline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginEnd="16dp"
-                android:text="@string/done"
-                android:textSize="17sp" />
-
+                style="@style/AppTheme.Toolbar.ImageLeft"/>
 
         </androidx.appcompat.widget.Toolbar>
 
-        <TextView
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="#60000000"
-            android:layout_width="match_parent"
-            android:layout_height="0.1dp"/>
+        <TextView style="@style/AppTheme.Divider.Toolbar"/>
 
     </LinearLayout>
 
