--- a/app/src/main/res/layout/fragment_preference_category.xml
+++ b/app/src/main/res/layout/fragment_preference_category.xml
@@ -6,52 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".view.loginFlow.PreferenceCategory">
 
-    <androidx.appcompat.widget.Toolbar
-        android:theme="@style/ThemeOverlay.AppCompat.Dark"
-        android:id="@+id/pref_category_toolbar"
-        style="@style/AppTheme.Toolbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <LinearLayout
+        android:id="@+id/preference_category_ll"
+        style="@style/AppTheme.Toolbar.LinearLayout">
+
+    <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/preferrence"
-            android:textColor="@color/colorText"
-            android:textSize="17sp"
+            style="@style/AppTheme.Toolbar.Title"
             tools:text="Preferrence" />
 
         <TextView
             android:id="@+id/pref_category_btn_next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginEnd="16dp"
-            android:text="@string/next"
-            android:textColor="@color/colorTextSecondary"
-            android:textSize="17sp"
-            tools:text="Next" />
+            style="@style/AppTheme.Toolbar.TextLeft"
+            android:text="@string/next"/>
 
 
     </androidx.appcompat.widget.Toolbar>
 
+        <TextView style="@style/AppTheme.Divider.Toolbar"/>
 
-    <FrameLayout android:layout_width="match_parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/pref_category_toolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_height="wrap_content">
 
-        <!-- **** Place Your Content Here **** -->
-
-        <View android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/too"/>
-
-    </FrameLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/select_what_you_like"
@@ -63,7 +39,7 @@
         android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/pref_category_toolbar" />
+        app:layout_constraintTop_toBottomOf="@id/preference_category_ll" />
 
     <ImageView
         android:id="@+id/pref_city_btn"
