--- a/app/src/main/res/layout/fragment_preference_suggestion.xml
+++ b/app/src/main/res/layout/fragment_preference_suggestion.xml
@@ -16,45 +16,26 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <androidx.appcompat.widget.Toolbar
-        android:theme="@style/ThemeOverlay.AppCompat.Dark"
-        android:id="@+id/pref_sub_category_toolbar"
-        style="@style/AppTheme.Toolbar"
-        tools:ignore="MissingConstraints">
+        <LinearLayout
+            android:id="@+id/preference_suggestions_ll"
+            style="@style/AppTheme.Toolbar.LinearLayout">
+
+        <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/suggestions"
-            android:textColor="@color/colorText"
-            android:textSize="17sp" />
+            style="@style/AppTheme.Toolbar.Title"
+            android:text="@string/suggestions" />
 
         <TextView
             android:id="@+id/suggestion_ok_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginEnd="16dp"
-            android:text="@string/ok"
-            android:textColor="@color/colorTextSecondary"
-            android:textSize="17sp" />
+            style="@style/AppTheme.Toolbar.TextLeft"
+            android:text="@string/ok" />
 
     </androidx.appcompat.widget.Toolbar>
 
-    <FrameLayout android:layout_width="match_parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/pref_sub_category_toolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_height="wrap_content">
+            <TextView style="@style/AppTheme.Divider.Toolbar"/>
 
-        <!-- **** Place Your Content Here **** -->
-
-        <View android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/too"/>
-
-    </FrameLayout>
+        </LinearLayout>
 
         <TextView
             android:layout_gravity="center"
@@ -67,7 +48,7 @@
             android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pref_category_toolbar" />
+            app:layout_constraintTop_toBottomOf="@id/preference_suggestions_ll" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:padding="16dp"
