--- a/app/src/main/res/layout/fragment_profil_modify.xml
+++ b/app/src/main/res/layout/fragment_profil_modify.xml
@@ -10,54 +10,23 @@
 
     <LinearLayout
         android:id="@+id/profile_modify_ll"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        style="@style/AppTheme.Toolbar.LinearLayout">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/pref_profil_modify_toolbar"
-            style="@style/AppTheme.Toolbar"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark">
+        <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
             <TextView
                 android:id="@+id/profile_modify_name_toolbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textColor="@color/colorText"
-                android:textSize="17sp"
-                tools:text="Ronny" />
+                style="@style/AppTheme.Toolbar.Title"/>
 
             <TextView
                 android:id="@+id/profile_modify_done_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginEnd="16dp"
-                android:textColor="@color/colorTextSecondary"
-                android:text="@string/done"
-                android:textSize="17sp"/>
+                style="@style/AppTheme.Toolbar.TextLeft"
+                android:text="@string/done"/>
 
         </androidx.appcompat.widget.Toolbar>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pref_sub_category_toolbar">
+        <TextView style="@style/AppTheme.Divider.Toolbar"/>
 
-            <!-- **** Place Your Content Here **** -->
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:background="@drawable/too" />
-
-        </FrameLayout>
     </LinearLayout>
 
     <ScrollView
