--- a/app/src/main/res/layout/fragment_search_explore_clicked.xml
+++ b/app/src/main/res/layout/fragment_search_explore_clicked.xml
@@ -8,37 +8,18 @@
 
     <LinearLayout
         android:id="@+id/search_explore_clicked_ll"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        style="@style/AppTheme.Toolbar.LinearLayout">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/search_explore_clicked_toolbar"
-            style="@style/AppTheme.Toolbar"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark"
-            tools:ignore="MissingConstraints">
+        <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
             <TextView
                 android:id="@+id/search_explore_clicked_title_toolbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textColor="@color/colorText"
-                android:textSize="17sp"
-                android:text="Football" />
+                style="@style/AppTheme.Toolbar.Title"/>
 
         </androidx.appcompat.widget.Toolbar>
 
-            <View
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/search_explore_clicked_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:background="@drawable/too" />
+        <TextView style="@style/AppTheme.Divider.Toolbar"/>
+
 
     </LinearLayout>
 
