--- a/app/src/main/res/drawable/too.xml
+++ b/app/src/main/res/drawable/too.xml
@@ -2,8 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient android:startColor="@android:color/holo_red_dark"
-        android:endColor="@android:color/holo_red_dark"
+    <gradient android:startColor="#60000000"
+        android:endColor="#60000000"
         android:angle="90"/>
+    <size
+        android:height="0.1dp"
+        android:width="500dp"
+        />
 
 </shape>
