--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -48,29 +48,55 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/create_timenote_take_add_pic"
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/create_timenote_linearLayoutMain"
                 app:layout_constraintTop_toTopOf="@id/create_timenote_constrainLayout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textSize="14sp"
-                android:textAllCaps="true"
-                android:drawablePadding="8dp"
-                android:drawableBottom="@drawable/ic_new_timenote_add_iamge"
-                android:textColor="@color/colorText"
-                android:text="@string/take_add_a_picture"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_marginTop="12dp"
-                android:id="@+id/card_line_0"
-                app:layout_constraintTop_toBottomOf="@id/create_timenote_take_add_pic"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:background="#60000000"
-                android:layout_width="200dp"
-                android:layout_height="0.1dp"/>
+                <TextView
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:id="@+id/create_timenote_take_add_pic"
+                    android:textSize="14sp"
+                    android:textAllCaps="true"
+                    android:drawablePadding="8dp"
+                    android:drawableBottom="@drawable/ic_new_timenote_add_iamge"
+                    android:textColor="@color/colorText"
+                    android:text="@string/take_add_a_picture"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <ProgressBar
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:id="@+id/create_timenote_pb"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="12dp"
+                    android:id="@+id/create_timenote_pic"
+                    android:visibility="gone"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:layout_marginTop="12dp"
+                    android:id="@+id/card_line_0"
+                    android:background="#60000000"
+                    android:layout_width="200dp"
+                    android:layout_height="0.1dp"/>
+
+            </LinearLayout>
+
+
 
             <TextView
                 android:id="@+id/choose_color_label"
@@ -81,7 +107,7 @@
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/card_line_0"
+                app:layout_constraintTop_toBottomOf="@id/create_timenote_linearLayoutMain"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
