--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,13 +4,13 @@
 
     <item
         android:id="@+id/navigation_graph_tab_1"
-        android:icon="@drawable/ic_home_bnv"
+        android:icon="@drawable/home_menu_item"
         android:title=""
         app:showAsAction="always" />
 
     <item
         android:id="@+id/navigation_graph_tab_2"
-        android:icon="@drawable/ic_location_bnv"
+        android:icon="@drawable/nearby_menu_item"
         android:title=""
         app:showAsAction="always" />
 
@@ -22,13 +22,12 @@
 
     <item
         android:id="@+id/navigation_graph_tab_3"
-        android:icon="@drawable/ic_search_bnv"
+        android:icon="@drawable/search_menu_item"
         android:title=""
         app:showAsAction="always" />
 
     <item
         android:id="@+id/navigation_graph_tab_4"
-        android:icon="@drawable/ic_home_bnv"
         android:title=""
         app:showAsAction="always" />
 
